[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydb"
version = "0.2.4"
description = "A tiny embedded relational database for learning"
requires-python = ">=3.10"
dependencies = [
    "pygments>=2.10",
]

[project.scripts]
tinydb = "tinydb.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["tinydb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
